fix duplicate detail view on mobile

--- a/src/app/features/tour/tour-overview/tour-overview.css
+++ b/src/app/features/tour/tour-overview/tour-overview.css
@@ -4,7 +4,7 @@
   gap: 10px;
 }
 
-/* LEFT */
+/* LEFT = tour list*/
 .left {
   flex: 1;
   min-width: 250px;
@@ -14,7 +14,7 @@
   overflow-y: auto;
 }
 
-/* RIGHT */
+/* RIGHT = tour details*/
 .right {
   flex: 2;
   padding: 10px;
@@ -33,10 +33,10 @@
   margin-bottom: 10px;
 }
 
-/* MOBILE */
+/* MOBILE LAYOUT*/
 @media (max-width: 800px) {
   .container {
-    flex-direction: column;
+    flex-direction: column;  /*stack list+details vertically */
   }
 
   .left {
@@ -44,20 +44,30 @@
     border-right: none;
   }
 
-  @media (max-width: 800px) {
-  .container {
-    flex-direction: column;
-  }
-
+  /*  !! hide right side on mobile (details already shown in .mobile-detials)*/
   .right {
+    display: none;
+  }
+
+  /*inline details inside list item*/
+  .mobile-details {
     display: block;
   }
+}
+/*dekstoo details styling*/
+.details {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
 }
 
-  .mobile-details{
-    display: block;
-  }
+/* hodden by desktop*/
+.mobile-details {
+  display: none;
 }
+
+
+
 
 .list-header {
   display: flex;
@@ -89,7 +99,7 @@
   flex-wrap: wrap;
 }
 
-
+/* BUTTONS */
 .btn {
   padding: 8px 14px;
   border: none;
@@ -124,18 +134,8 @@
   background-color: #27ae60;
 }
 
-.details {
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
-}
 
-.mobile-details {
-  display: none;
-}
-
-
-
+/* EMPTY STATE */
 .empty-state {
   flex: 1;
   display: flex;
@@ -153,6 +153,7 @@
   opacity: 0.8;
 }
 
+/* CREATE LINK ON EMPTY STATE */
 .create-link {
   color: #3498db;
   text-decoration: none;
